Changed BusinessRule save method